                       Configurator.java Change Log
                       ----------------------------

Opravy:

PropertySetter
- přejmenování - odstranění zkratky
- odstranění zkratky z názvu metody a parametru

Logging(trace)
- přidání {} kolem příkazu v if
- přejmenování: f -> format
                a -> args

ConfigurationException
- odstranění zkratek z názvu
- přejmenování: f -> format
                a -> args
                t -> throwable

AllDeclaredFieldsIterable
- změna názvu
- přejmenování: lc -> leafClass
                kl -> klass

ArrayIterator
- změna názvu
- změna názvu proměnných - odstranění zkratek

Formátování
- obalení každého bloku {}, konzistentní používání { na stejném řádku jako řídící struktura
- konzistentní použití mezer kolem operátorů, čárek
- odsazení kódu pouze pomocí tabů
- odstranění whitespace na koncích řádků