@@ -32,3 +32,7 @@ Formátování
 - konzistentní použití mezer kolem operátorů, čárek
 - odsazení kódu pouze pomocí tabů
 - odstranění whitespace na koncích řádků
+
+Configurator.set()
+- přejmenování parametrů a lokálních proměnných
+- vyjmutí vnořeného if
